--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <script src="main.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/gh/asvistun5/Ently@main/main.js"></script>-->
     <script src="script.js"></script>
 </body>
 </html>
