--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="spinner">
+        <div></div>
+    </div>
     <script src="main.js"></script>
     <!--<script src="https://cdn.jsdelivr.net/gh/asvistun5/Ently@main/main.js"></script>-->
     <script src="script.js"></script>
